--- a/3 uzd/css/styles.css
+++ b/3 uzd/css/styles.css
@@ -15,6 +15,10 @@ aside {
   justify-items: stretch;
 }
 
+aside * {
+  border: dotted ;
+}
+
 /* Vaiko selektorius */
 aside > section {
   margin: auto;
@@ -25,13 +29,13 @@ aside > section {
 /* Ipedinio selektorius */
 aside table {
   margin: auto;
-  border: solid !important;
+  border: solid;
 }
 
 /* Inherit */
 aside table * {
   border: inherit;
-}
+} 
 
 a {
   text-decoration: none;
